--- a/.github/workflows/netbsd.yml
+++ b/.github/workflows/netbsd.yml
@@ -41,6 +41,7 @@ jobs:
             mkdir build
             cd build
             cmake \
+            -D BUILD_SHARED_LIBS:BOOL=OFF \
             -D CTEST_DROP_SITE_INIT:STRING="my.cdash.org" \
             -D SITE:STRING=nbsd ..
             ctest -T Build -VV --output-on-error -j
