--- a/.github/workflows/netbsd.yml
+++ b/.github/workflows/netbsd.yml
@@ -36,6 +36,8 @@ jobs:
             sudo pkgin -y install jpeg-9e
             sudo pkgin -y install mozilla-rootcerts
             sudo pkgin -y install mozilla-rootcerts-openssl
+            export LD_LIBRARY_PATH=/usr/local/lib
+            ls /usr/local/lib
             git clone https://github.com/HDFGroup/hdf4
             cd hdf4
             mkdir build
@@ -47,4 +49,3 @@ jobs:
             ctest -T Build -VV --output-on-error -j
             ctest -T Test -VV --output-on-error -j
             ctest -T Submit
-        continue-on-error: true
