--- a/.github/workflows/nbsd-f.yml
+++ b/.github/workflows/nbsd-f.yml
@@ -39,7 +39,7 @@ jobs:
             sudo pkgin -y install mozilla-rootcerts-openssl
             export LD_LIBRARY_PATH=/usr/pkg/lib
             export FC=/usr/pkg/bin/gfortran
-            ls /usr/pkg/lib
+            ls /usr/pkg/bin
             git clone https://github.com/HDFGroup/hdf4
             cd hdf4
             mkdir build
