ci: rm tirpc s390x and nbsd f j

--- a/.github/workflows/nbsd-f-j.yml
+++ b/.github/workflows/nbsd-f-j.yml
@@ -1,8 +1,8 @@
-name: nbsd f
+name: nbsd f j
 
 on:
   push:
-    branches: [ main- ]
+    branches: [ main ]
 
 jobs:
   test: # make sure the action works on a clean machine without building
@@ -37,18 +37,20 @@ jobs:
             sudo pkgin -y install jpeg-9e
             sudo pkgin -y install mozilla-rootcerts
             sudo pkgin -y install mozilla-rootcerts-openssl
+            sudo pkgin -y install openjdk21
             export LD_LIBRARY_PATH=/usr/pkg/lib
             export FC=/usr/pkg/gcc7/bin/gfortran
-            ls /usr/pkg/gcc7/bin
+            export JAVA_HOME=/usr/pkg/java/openjdk21
+            ls /usr/pkg/java/openjdk21
             git clone https://github.com/HDFGroup/hdf4
             cd hdf4
             mkdir build
             cd build
             cmake \
-            -D BUILD_SHARED_LIBS:BOOL=OFF \
             -D CTEST_DROP_SITE_INIT:STRING="my.cdash.org" \
             -D HDF4_BUILD_FORTRAN:BOOL=ON \
-            -D SITE:STRING=f.nbsd ..
+            -D HDF4_BUILD_JAVA:BOOL=ON \
+            -D SITE:STRING=j.f.nbsd ..
             ctest -T Build -VV --output-on-error -j
             ctest -T Test -VV --output-on-error -j
             ctest -T Submit
