--- a/.github/workflows/s390x_auto.yml
+++ b/.github/workflows/s390x_auto.yml
@@ -1,6 +1,8 @@
 name: s390x auto
 
-on: [push, pull_request]
+on:
+  push:
+    branches: [ main ]
 
 jobs:
   aarch64_job:
@@ -22,7 +24,6 @@ jobs:
             apt-get update -q -y
             apt-get install -q -y git cmake libjpeg-dev zlib1g zlib1g-dev
             apt-get install -q -y gfortran g++  yacc flex libtool autotools-dev
-            apt-get install -q -y libtirpc-common libtirpc-dev libtirpc3
           run: |
             echo ::set-output name=uname::$(uname -a)
             git clone https://github.com/HDFGroup/hdf4
