--- a/.github/workflows/cwin.yml
+++ b/.github/workflows/cwin.yml
@@ -14,11 +14,14 @@ jobs:
 
     steps:
       - name: Clean up PATH
-        uses: cygwin/cygwin-install-action@master    
+        uses: cygwin/cygwin-install-action@master
         with:
           packages: cmake gcc-g++
       - name: Run cmake
         run: |
+          git clone https://github.com/HDFGroup/hdf4
+          cd hdf4
           $((Get-Command cmake.exe).Path -eq 'C:\cygwin\bin\cmake.exe') -or $(throw (Get-Command cmake.exe))
-          cmake.exe --version
+          cmake.exe -D CTEST_DROP_SITE_INIT:STRING="my.cdash.org" -D SITE:STRING=cwin ..
+          ctest.exe -D Experimental
 
