--- a/.github/workflows/cwin.yml
+++ b/.github/workflows/cwin.yml
@@ -2,8 +2,7 @@ name: cwin
 
 on:
   push:
-  pull_request:
-  workflow_dispatch:
+    branches: [ main ]
 
 jobs:
   test:
@@ -16,7 +15,7 @@ jobs:
       - name: Clean up PATH
         uses: cygwin/cygwin-install-action@master
         with:
-          packages: cmake gcc-g++
+          packages: cmake gcc gcc-g++
       - name: Run cmake
         run: |
           git clone https://github.com/HDFGroup/hdf4
