--- a/.github/workflows/cwin-auto.yml
+++ b/.github/workflows/cwin-auto.yml
@@ -17,7 +17,7 @@ jobs:
         with:
           packages: make automake gcc gcc-g++
       - name: Test HDF4
-        run: >-
+        run: |
           git clone https://github.com/HDFGroup/hdf4
           cd hdf4
           ./autogen.sh
