ci: move inside

--- a/.github/workflows/cwin-auto.yml
+++ b/.github/workflows/cwin-auto.yml
@@ -16,10 +16,9 @@ jobs:
         uses: cygwin/cygwin-install-action@master
         with:
           packages: make automake gcc gcc-g++
-      - run: git config --global core.autocrlf input
-        shell: pwsh -command ". '{0}'".
       - name: Test HDF4
         run: |
+          git config --global core.autocrlf input
           git clone https://github.com/HDFGroup/hdf4
           cd hdf4
           ./autogen.sh
