--- a/.github/workflows/cwin-auto.yml
+++ b/.github/workflows/cwin-auto.yml
@@ -21,11 +21,11 @@ jobs:
           git config --global core.autocrlf input
           git clone https://github.com/HDFGroup/hdf4
           cd hdf4
-          cat /usr/include/jpeglib.h
+          ls /usr/lib
           echo $CFLAGS
           export CFLAGS=-I/cygwin/usr/include
           echo $CFLAGS
           ./autogen.sh
-          ./configure CFLAGS="-I/cygwin/usr/include"
+          ./configure --with-jpeg=/usr
           make
         shell: C:\cygwin\bin\bash.exe --noprofile --norc -o igncr -eo pipefail '{0}'
