--- a/.github/workflows/cwin-auto.yml
+++ b/.github/workflows/cwin-auto.yml
@@ -11,7 +11,7 @@ jobs:
       - name: Clean up PATH
         uses: cygwin/cygwin-install-action@master
         with:
-          packages: automake make gcc libjpeg-devel libturbojpeg-devel libjpeg8 libtool
+          packages: automake make libjpeg-devel libturbojpeg-devel libjpeg8 libtool
       - name: Test HDF4
         run: |
           git config --global core.autocrlf input
