--- a/.github/workflows/cwin-auto.yml
+++ b/.github/workflows/cwin-auto.yml
@@ -9,7 +9,7 @@ jobs:
     runs-on: windows-latest
     steps:
       - name: Clean up PATH
-        uses: cygwin/cygwin-install-action@v4r
+        uses: cygwin/cygwin-install-action@v4
         with:
           packages: automake make libjpeg-devel libtool
       - name: Test HDF4
@@ -19,6 +19,6 @@ jobs:
           cd hdf4
           ls /usr/lib
           autoreconf -fvi
-          ./configure
+          ./configure CC=cc
           make
         shell: C:\cygwin\bin\bash.exe -o igncr -eo pipefail '{0}'
