--- a/.github/workflows/cwin-auto.yml
+++ b/.github/workflows/cwin-auto.yml
@@ -11,13 +11,14 @@ jobs:
       - name: Clean up PATH
         uses: cygwin/cygwin-install-action@v4
         with:
-          packages: automake make gcc libjpeg-devel libtool
+          packages: automake make gcc-g++ libjpeg-devel libtool
       - name: Test HDF4
         run: |
           git config --global core.autocrlf input
           git clone https://github.com/HDFGroup/hdf4
           cd hdf4
           ls /usr/lib
+          ls /usr/bin/
           autoreconf -fvi
           export CC=/usr/bin/gcc
           ./configure
