--- a/.github/workflows/cwin.yml
+++ b/.github/workflows/cwin.yml
@@ -24,6 +24,8 @@ jobs:
           mkdir build
           cd build
           which cmake
-          /usr/bin/cmake -D CTEST_DROP_SITE_INIT:STRING="my.cdash.org" -D SITE:STRING=cwin ..
+          /usr/bin/cmake -D BUILD_SHARED_LIBS:BOOL=OFF \
+           -D CTEST_DROP_SITE_INIT:STRING="my.cdash.org" \
+           -D SITE:STRING=cwin ..
           /usr/bin/ctest -D Experimental
         shell: C:\cygwin\bin\bash.exe -eo pipefail -o igncr '{0}'
