--- a/.github/workflows/cwin.yml
+++ b/.github/workflows/cwin.yml
@@ -7,15 +7,11 @@ on:
 jobs:
   test:
     runs-on: windows-latest
-    defaults:
-      run:
-        shell: pwsh
-
     steps:
       - name: Clean up PATH
         uses: cygwin/cygwin-install-action@master
         with:
-          packages: cmake gcc-fortran libjpeg-devel zlib-devel
+          packages: cmake gcc-fortran libjpeg-devel make zlib-devel
       - name: Run cmake
         run: |
           git clone https://github.com/HDFGroup/hdf4
@@ -24,8 +20,9 @@ jobs:
           mkdir build
           cd build
           which cmake
-          /usr/bin/cmake -D BUILD_SHARED_LIBS:BOOL=OFF \
+          cmake -D BUILD_SHARED_LIBS:BOOL=OFF \
            -D CTEST_DROP_SITE_INIT:STRING="my.cdash.org" \
            -D SITE:STRING=cwin ..
-          /usr/bin/ctest -D Experimental
+          make
+          make check
         shell: C:\cygwin\bin\bash.exe -eo pipefail -o igncr '{0}'
