--- a/.github/workflows/cwin.yml
+++ b/.github/workflows/cwin.yml
@@ -23,6 +23,6 @@ jobs:
           cmake -D BUILD_SHARED_LIBS:BOOL=OFF \
            -D CTEST_DROP_SITE_INIT:STRING="my.cdash.org" \
            -D SITE:STRING=cwin ..
-          make
-          make check
+          make -j
+          make test -j
         shell: C:\cygwin\bin\bash.exe -eo pipefail -o igncr '{0}'
