--- a/.github/workflows/cwin-sh.yml
+++ b/.github/workflows/cwin-sh.yml
@@ -1,8 +1,8 @@
-name: cwin hk
+name: cwin sh
 
 on:
   push:
-    branches: [ main- ]
+    branches: [ main ]
 
 jobs:
   test:
@@ -11,16 +11,16 @@ jobs:
       - name: Clean up PATH
         uses: cygwin/cygwin-install-action@master
         with:
-          packages: cmake gcc-fortran libjpeg-devel make zlib-devel
+          packages: cmake gcc-fortran libjpeg-devel zlib-devel
       - name: Run cmake
         run: |
-          git clone https://github.com/hyoklee/hdf4
-          cd h4
+          git clone https://github.com/HDFGroup/hdf4
+          cd hdf4
           export PATH=/usr/bin:$PATH
           mkdir build
           cd build
           which cmake
-          cmake -D BUILD_SHARED_LIBS:BOOL=OFF \
+          cmake \
            -D CTEST_DROP_SITE_INIT:STRING="my.cdash.org" \
            -D SITE:STRING=cwin ..
           make -j
