--- a/.github/workflows/cwin.yml
+++ b/.github/workflows/cwin.yml
@@ -25,6 +25,5 @@ jobs:
            -D BUILD_SHARED_LIBS:BOOL=OFF \
            -D CTEST_DROP_SITE_INIT:STRING="my.cdash.org" \
            -D SITE:STRING=cwin ..
-          make -j
-          make test -j
+          ctest -D Experimental
         shell: C:\cygwin\bin\bash.exe -eo pipefail -o igncr '{0}'
