--- a/.github/workflows/cwin.yml
+++ b/.github/workflows/cwin.yml
@@ -21,7 +21,7 @@ jobs:
           mkdir build
           cd build
           which cmake
-          cmake \
+          cmake -G Ninja \
            -D BUILD_SHARED_LIBS:BOOL=OFF \
            -D CTEST_DROP_SITE_INIT:STRING="my.cdash.org" \
            -D SITE:STRING=cwin ..
