--- a/.github/workflows/riscv64-auto.yml
+++ b/.github/workflows/riscv64-auto.yml
@@ -1,4 +1,4 @@
-name: riscv64 lin
+name: riscv64 lin auto
 
 on:
   push:
@@ -30,11 +30,10 @@ jobs:
             echo ::set-output name=uname::$(uname -a)
             git clone https://github.com/HDFGroup/hdf5
             cd hdf5
-            mkdir build
-            cd build
-            cmake -DHDF5_ENABLE_SZIP_SUPPORT:BOOL=OFF ..
-            make
-            make test
+            ./autogen.sh	    
+            ./configure --prefix=/usr --disable-static --disable-sharedlib-rpath --enable-build-mode=production
+	    make -j
+            make check
 
       - name: Get the output
         # Echo the `uname` output parameter from the `runcmd` step
