--- a/.github/workflows/riscv64-auto.yml
+++ b/.github/workflows/riscv64-auto.yml
@@ -25,14 +25,14 @@ jobs:
           install: |
             apt-get update -q -y
             apt-get install -q -y git
-            apt-get install -q -y cmake
+            apt-get install -q -y autoconf automake libtool libtool-bin
           run: |
             echo ::set-output name=uname::$(uname -a)
             git clone https://github.com/HDFGroup/hdf5
             cd hdf5
-            ./autogen.sh	    
+            ./autogen.sh
             ./configure --prefix=/usr --disable-static --disable-sharedlib-rpath --enable-build-mode=production
-	    make -j
+            make -j
             make check
 
       - name: Get the output
