--- a/.github/workflows/riscv64.yml
+++ b/.github/workflows/riscv64.yml
@@ -3,7 +3,7 @@ name: riscv64 lin
 on:
   push:
     branches:
-      - main-
+      - main
 
 jobs:
   aarch64_job:
@@ -32,9 +32,11 @@ jobs:
             cd hdf5
             mkdir build
             cd build
-            cmake -DHDF5_ENABLE_SZIP_SUPPORT:BOOL=OFF ..
-            make
-            make test
+            cmake -DHDF5_ENABLE_SZIP_SUPPORT:BOOL=OFF \
+              -D CTEST_DROP_SITE_INIT:STRING="my.cdash.org" \
+              -D SITE:STRING=riscv64 ..
+            cat CMakeCache.txt
+            ctest -D Experimental
 
       - name: Get the output
         # Echo the `uname` output parameter from the `runcmd` step
