--- a/.github/workflows/mac14-h4.2.16-2.yml
+++ b/.github/workflows/mac14-h4.2.16-2.yml
@@ -8,7 +8,7 @@ on:
 jobs:
   build:
     name: mac14 h4.2.16-2
-    runs-on: macos-14 h4.2.16-2
+    runs-on: macos-14
     steps:
       - name: Install Dependencies
         run: |
