--- a/.github/workflows/riscv64-auto.yml
+++ b/.github/workflows/riscv64-auto.yml
@@ -33,7 +33,7 @@ jobs:
             cd hdf5
             export CFLGAS="-v -fPIC"
             ./autogen.sh
-            ./configure --verbose CC=/usr/bin/cc AR=/usr/bin/gcc-ar-11
+            ./configure --verbose --disable-cxx CC=/usr/bin/cc AR=/usr/bin/gcc-ar-11 
             cat config.log
             make -j
             make check
