ci: install make

--- a/.github/workflows/riscv64-auto.yml
+++ b/.github/workflows/riscv64-auto.yml
@@ -25,7 +25,7 @@ jobs:
           install: |
             apt-get update -q -y
             apt-get install -q -y git g++
-            apt-get install -q -y autoconf automake libtool libtool-bin
+            apt-get install -q -y autoconf automake libtool libtool-bin make
           run: |
             echo ::set-output name=uname::$(uname -a)
             git clone --quiet https://github.com/HDFGroup/hdf5
