--- a/.github/workflows/riscv64-auto.yml
+++ b/.github/workflows/riscv64-auto.yml
@@ -33,7 +33,7 @@ jobs:
             export CFLGAS="-v -fPIC -static"
             export CPPFLGAS="-v -fPIC -static"
             ./autogen.sh
-            ./configure --enable-static --disable-shared --disable-dependency-tracking --verbose 
+            ./configure --enable-static --disable-shared --disable-dependency-tracking --with-szlib=no --verbose 
             make -j
             make check
 
